2017-08-10  Marek Polacek  <polacek@redhat.com>

	PR testsuite/81784
	* gcc.dg/compare2.c: Update dg-bogus and dg-warning.

2017-08-10  Martin Liska  <mliska@suse.cz>

	PR c++/81355
	* g++.dg/other/pr81355.C: New test.

2017-08-09  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/all-non-failing-tests.h: Add note about
	test-vector-types.cc.
	* jit.dg/test-error-gcc_jit_type_get_vector-bad-type.c: New test
	case.
	* jit.dg/test-error-gcc_jit_type_get_vector-non-power-of-two.c:
	New test case.
	* jit.dg/test-vector-types.cc: New test case.

2017-08-09  Andrew Pinski  <apinski@cavium.com>

	* gcc.target/aarch64/vect-xorsign_exec.c: Add
	--save-temps to the options passed.

2017-08-09  Michael Collison  <michael.collison@arm.com>

	* testsuite/g++.dg/ext/packed8.C: Remove -mstructure-size-
	boundary option and fix comment.
	* testsuite/g++.dg/init/array16.C: Remove -mstructure-size-
	boundary option and fix comment.
	* testsuite/g++.dg/other/crash-4.C: Remove -mstructure-size-
	boundary option and fix comment.
	* testsuite/gcc.dg/builtin-stringop-chk-1.c: Remove
	-mstructure-size boundary option.

2017-08-09  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/81423
	* gcc.c-torture/execute/pr81423.c: New testcase.

2017-08-09  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-pack-double.c: New.
	* gcc.target/powerpc/fold-vec-pack-int.c: New.
	* gcc.target/powerpc/fold-vec-pack-longlong.c: New.
	* gcc.target/powerpc/fold-vec-pack-short.c: New.

2017-08-09  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-msum-char.c: New.
	* gcc.target/powerpc/fold-vec-msum-short.c: New.

2017-08-09  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-madd-double.c: New.
	* gcc.target/powerpc/fold-vec-madd-float.c: New.
	* gcc.target/powerpc/fold-vec-madd-short.c: New.

2017-08-09  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-cntlz-int.c: New.